--- a/style.css
+++ b/style.css
@@ -545,6 +545,472 @@ body {
   }
 }
 
+@media (max-width: 768px){
+  .header::before{
+    display: none;
+  }
+  .header__logo {
+    display: flex;
+    width: 317px;
+    height:40px;
+    font-size: 30px;
+    letter-spacing: 0.07em;
+    color: black;
+    background-color: white;
+    align-items: center;
+    padding-top: 14px;
+    padding-left: 26px;
+  }
+  .header__language {
+    display: none;
+  }
+  .burger-menu{
+    margin-left: auto;
+  }
+  #burger-menu__toggle {
+    display: none;
+  }
+  .burger-menu__btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 75px;
+    height: 75px;
+    cursor: pointer;
+    opacity: initial;
+    background: #E5E5E5;
+  }
+  .burger-menu__btn::before {
+   content: "";
+   position: absolute;
+   background: black;
+   width: 18.7px;
+   height: 3.48px;
+   top: 29.5px;
+   right: 28px;
+  }
+  .burger-menu__btn::after {
+   content: "";
+   background: black;
+   position: absolute;
+   width: 18.7px;
+   height: 3.48px;
+   top: 39px;
+   right: 28px;
+  }
+
+  .section-one{
+    display: flex;
+   }
+  .section-one__img{
+    position: absolute;
+    width: 100%;
+    height: 800px;
+    background: no-repeat url('img/girl_mobile.png');
+    background-size: cover;
+    background-position: top 38% left 0%;
+    margin: 0;
+    padding: 0;
+  }
+  .section-one__title{
+    font: bold 75px/65px montserrat, Arial, Helvetica, Sans-serif;
+    padding: 600px 0px 0px 90px;
+    margin: 0px;
+    z-index: 2;
+  }
+  .section-one__title::before {
+    content: "";
+    position: absolute;
+    margin: 20% 0 0 35%;
+    border: solid #020202;
+    border-width: 0 3px 3px 0;
+    display: inline-block;
+    transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+    width: 22px;
+    height: 22px;
+  }
+  .section-one__subtitle{
+    display: none;
+  }
+  .section-one__button{
+    display: none;
+  }
+  .section-one__link{
+    display: none;
+  }
+  .section-one__vektor{
+    display: none;
+  }
+  .section-one__footer{
+    display: none;
+  }
+
+  .section-two{
+    height: 800px;
+    margin-top: 70px;
+  }
+  .section-two__bag-one{
+    display: none;
+  }
+  .section-two__bag-img-two{
+    height: 100%;
+    width: 100%;
+    background-position: top 120% left 45%;
+    background-size: 55%;
+    padding: 0px;
+    margin: 0px;
+  }
+  .section-two__product{
+    position: absolute;
+    width: 70%;
+    height: 80%;
+    margin: 55% 0px 0px 15%;
+  }
+  .section-two__product_title{
+    font: bold 35px/40px 'montserrat', Arial, Helvetica, Sans-serif;
+    padding: 21px 0px 3px 31px;
+  }
+  .section-two__product_subtitle{
+    font:bold 13px/14px 'montserrat', Arial, Helvetica, Sans-serif;
+    padding: 0px 0px 15px 34px;
+    letter-spacing: 0.17em;
+  }
+  .section-two__product_text{
+    font: 16px/23px 'montserrat', Arial, Helvetica, Sans-serif;
+    padding: 0px 20px 0px 37px;
+  }
+  .section-two__circle{
+    position: absolute;
+    display: flex;
+    align-items: center;
+    margin-top: 20px;
+  }
+  .section-two__circle-color{
+    width: 30px;
+    height: 30px;
+  }
+  .section-two__product_circle_grey {
+    margin-left: 38px;
+  }
+  .section-two__product_circle_pink {
+    margin-left: 12px;
+  }
+  .section-two__product_circle_blue {
+    margin-left: 12px;
+  }
+  .section-two__product_circle_green {
+    margin-left: 12px;
+  }
+  .section-two__product-price{
+    align-items: center;
+    font: bold 38px/41px 'montserrat', Arial, Helvetica, Sans-serif;
+    margin-left:55%;
+  }
+  .section-two__product-button{
+    width: 260px;
+    height: 37px;
+    margin: 85px 139px 0px 139px;
+    font:14px 'Montserrat', Arial, Helvetica, Sans-serif;
+  }
+  .section-two__link{
+    display: none;
+  }
+  .section-two__vektor{
+    display: none;
+  }
+
+  .section-three{
+    height: 800px;
+   }
+  .section-three::before{
+    content: '';
+    display: flex;
+    position: absolute;
+    width: 42px;
+    height: 800px;
+    background: black;
+    right: 62%;
+  }
+  .section-three__look{
+    position: absolute;
+    z-index: 1;
+    width: 70%;
+    background-size: 103%;
+    margin-left: 15%;
+    margin-top: 20px;
+  }
+  .section-three__look-text{
+    position: absolute;
+    margin: 53% 0px 0px 25%;
+    width: 56%;
+    height: 45%;
+    z-index: 1;
+  }
+  .look-text__title{
+    font: bold 31px/32px 'montserrat', arial, helvetica, sans-serif;
+    margin: 15px 0px 0px 23px;
+   }
+  .look-text__subtitle{
+    font: 14px 'montserrat', arial, helvetica, sans-serif;
+    margin: 5px 0px 0px 23px;
+  }
+  .look-text__text{
+    font: 16px/23px 'montserrat', arial, helvetica, sans-serif;
+    margin: 10px 0px 8px 24px;
+  }
+  .look-text__button{
+    font: 14px 'montserrat', arial, helvetica, sans-serif;
+    height: 37px;
+    width: 260px;
+    margin: 0px 85px 0px 85px;
+  }
+  .section-three__link{
+    font: 25px/30px 'montserrat', arial, helvetica, sans-serif;
+    margin: 92% 40px 0px 55%;
+  }
+  .section-three__vektor{
+    margin: 100% 0px 0px 55%;
+    background-size: 100%;
+    width: 138px;
+  }
+  .section-three__footer{
+   display: none;
+  }
+}
+
+@media (max-width: 678px){
+  .section-two__bag-img-two{
+    background-position: top 200% left 45%;
+  }
+  .section-two__product-price{
+    margin-left:40%;
+  }
+  .section-two__product-button{
+    margin: 85px 107px 0px 107px;
+  }
+  .look-text__button{
+    margin: 0px 59px 0px 59px;
+  }
+}
+
+@media (max-width: 650px){
+  .section-two__bag-img-two{
+    background-position: top 280% left 45%;
+  }
+  .section-two__product{
+    margin: 60% 0px 0px 15%;
+  }
+}
+
+@media (max-width: 610px){
+  .section-one__title::before {
+    margin: 25% 0 0 35%;
+  }
+  .section-two__bag-img-two{
+    background-position: top 690% left 45%;
+  }
+  .section-two__product{
+    height: 85%;
+    margin: 62% 0px 0px 15%;
+  }
+  .section-two__product-price{
+    margin-left:30%;
+  }
+  .section-three__vektor{
+    margin: 102% 0px 0px 55%;
+}
+
+@media (max-width: 562px){
+  .section-two__bag-img-two{
+    background-position: top 0% left 45%;
+  }
+  .section-two__product{
+    height: 78%;
+    margin: 72% 0px 0px 15%;
+  }
+  .section-two__product_title{
+    font: bold 30px/32px 'montserrat', Arial, Helvetica, Sans-serif;
+  }
+  .section-two__product_subtitle{
+    font:bold 11px/13px 'montserrat', Arial, Helvetica, Sans-serif;
+  }
+  .section-two__product_text{
+    font: 14px/20px 'montserrat', Arial, Helvetica, Sans-serif;
+  }
+  .section-two__product-price{
+    margin-left:19%;
+    font: bold 33px/35px 'montserrat', Arial, Helvetica, Sans-serif;
+  }
+  .section-two__product-button{
+    margin: 85px 67px 0px 67px;
+  }
+  .look-text__title{
+    font: bold 25px/27px 'montserrat', arial, helvetica, sans-serif;
+   }
+  .look-text__subtitle{
+    font: 11px 'montserrat', arial, helvetica, sans-serif;
+  }
+  .look-text__text{
+    font: 13px/16px 'montserrat', arial, helvetica, sans-serif;
+    margin: 10px 0px 20px 24px;
+  }
+  .look-text__button{
+    width: 240px;
+    margin: 0px 27px 0px 34px;
+  }
+  .section-three__link{
+    margin: 100% 40px 0px 50%;
+  }
+  .section-three__vektor{
+    margin: 110% 0px 0px 50%;
+  }
+}
+
+@media (max-width: 520px){
+  .section-one__title{
+    font: bold 57px/55px montserrat, Arial, Helvetica, Sans-serif;
+  }
+
+  .section-two__product_title{
+    font: bold 28px/30px 'montserrat', Arial, Helvetica, Sans-serif;
+  }
+  .section-two__product_subtitle{
+    font:bold 12px/13px 'montserrat', Arial, Helvetica, Sans-serif;
+  }
+  .section-two__product_text{
+    font: 13px/18px 'montserrat', Arial, Helvetica, Sans-serif;
+  }
+  .section-two__circle{
+    margin-top: 15px;
+  }
+  .section-two__circle-color{
+    width: 25px;
+    height: 25px;
+  }
+  .section-two__product-price{
+    align-items: center;
+    font: bold 32px/34px 'montserrat', Arial, Helvetica, Sans-serif;
+    margin-left:15%;
+  }
+  .section-two__product-button{
+    width: 220px;
+    margin: 90px 67px 0px 67px;
+  }
+
+  .section-three__look-text{
+    margin: 56% 0px 0px 24%;
+  }
+  .look-text__title{
+    font: bold 24px/26px 'montserrat', arial, helvetica, sans-serif;
+   }
+  .look-text__subtitle{
+    font: 12px 'montserrat', arial, helvetica, sans-serif;
+  }
+  .look-text__text{
+    font: 13px/16px 'montserrat', arial, helvetica, sans-serif;
+    margin: 10px 0px 20px 24px;
+  }
+  .look-text__button{
+    width: 200px;
+    margin: 0px 22px 0px 40px;
+  }
+  .section-three__link{
+    font: 19px/22px 'montserrat', arial, helvetica, sans-serif;
+    margin: 115% 40px 0px 50%;
+  }
+  .section-three__vektor{
+    margin: 123% 0px 0px 50%;
+  }
+}
+
+@media (max-width: 450px){
+  .section-one__img{
+    background-position: top 38% left 75%;
+  }
+  .section-one__title{
+    font: bold 45px/47px montserrat, Arial, Helvetica, Sans-serif;
+    padding: 615px 0px 0px 90px;
+  }
+  .section-one__title::before {
+    margin: 32% 0 0 28%;
+  }
+  .section-two__product_title{
+    font: bold 22px/26px 'montserrat', Arial, Helvetica, Sans-serif;
+  }
+  .section-two__product_subtitle{
+    font:bold 10px/11px 'montserrat', Arial, Helvetica, Sans-serif;
+  }
+  .section-two__product_text{
+    font: 11px/15px 'montserrat', Arial, Helvetica, Sans-serif;
+  }
+  .section-two__circle-color{
+    width: 23px;
+    height: 23px;
+  }
+  .section-two__product-price{
+    align-items: center;
+    font: bold 26px/28px 'montserrat', Arial, Helvetica, Sans-serif;
+    margin-left:15%;
+  }
+  .section-two__product-button{
+    font:13px 'Montserrat', Arial, Helvetica, Sans-serif;
+    width: 180px;
+  }
+
+  .look-text__title{
+    font: bold 20px/22px 'montserrat', arial, helvetica, sans-serif;
+   }
+  .look-text__subtitle{
+    font: 10px 'montserrat', arial, helvetica, sans-serif;
+  }
+  .look-text__text{
+    font: 11px/15px 'montserrat', arial, helvetica, sans-serif;
+  }
+  .look-text__button{
+    font:13px 'Montserrat', Arial, Helvetica, Sans-serif;
+    width: 175px;
+    margin: 0px 22px 0px 40px;
+  }
+  .section-three__link{
+    font: 16px/19px 'montserrat', arial, helvetica, sans-serif;
+  }
+}
+
+@media (max-width: 398px){
+  .section-two{
+    height: 700px;
+    margin-top: 70px;
+  }
+  .section-two__product{
+    width: 78%;
+    margin: 73% 0px 0px 11%;
+  }
+  .section-two__product-button{
+    margin: 85px 67px 0px 63px;
+  }
+
+  .section-three{
+    height: 680px;
+   }
+  .section-three::before{
+     height: 680px;
+   }
+  .section-three__look-text{
+     margin: 56% 0px 0px 20%;
+     width: 60%;
+   }
+  .look-text__button{
+    margin: 0px 22px 0px 35px;
+  }
+  .section-three__link{
+    margin: 123% 40px 0px 50%;
+  }
+  .section-three__vektor{
+    margin: 133% 0px 0px 50%;
+  }
+}
+
 @media (max-width: 375px){
   .header::before{
     display: none;
@@ -614,21 +1080,9 @@ body {
   }
   .section-one__title{
     font: bold 52px/51px montserrat, Arial, Helvetica, Sans-serif;
-    padding: 365px 0px 0px 26px;
+    padding: 365px 0px 0px 24px;
     margin: 0px;
     z-index: 2;
-  }
-  .section-one__title::after {
-    content: "";
-    position: relative;
-    margin: 11px 0 0 149px;
-    border: solid #020202;
-    border-width: 0 3px 3px 0;
-    display: inline-block;
-    transform: rotate(45deg);
-    -webkit-transform: rotate(45deg);
-    width: 22px;
-    height: 22px;
   }
   .section-one__subtitle{
     display: none;
@@ -647,7 +1101,7 @@ body {
   }
 
   .section-two{
-    height: 596px;
+    height: 634px;
     margin-top: 24px;
   }
   .section-two__bag-one{
@@ -657,7 +1111,7 @@ body {
     position: absolute;
     height: 289px;
     width: 224px;
-    background-position: top 145% left 99%;
+    background-position: top 41% left 99%;
     background-size: 75%;
     padding: 0px 0px 0px 76px;
     margin: 0px;
@@ -666,7 +1120,7 @@ body {
     position: absolute;
     width: 322px;
     height: 282px;
-    margin: 262px 0px 0px 24px;
+    margin: 298px 0px 0px 26px;
   }
   .section-two__product_title{
     font: bold 21px/20px 'montserrat', Arial, Helvetica, Sans-serif;
@@ -679,7 +1133,7 @@ body {
   }
   .section-two__product_text{
     font: 10px/13px 'montserrat', Arial, Helvetica, Sans-serif;
-    padding: 0px 41px 0px 37px;
+    padding: 0px 41px 0px 33px;
   }
   .section-two__circle{
     position: absolute;
@@ -706,12 +1160,12 @@ body {
   .section-two__product-price{
     align-items: center;
     font: bold 20px/28px 'montserrat', Arial, Helvetica, Sans-serif;
-    margin-left:27%;
+    margin-left:26%;
   }
   .section-two__product-button{
     width: 260px;
     height: 37px;
-    margin: 74px 0px 0px 35px;
+    margin: 74px 0px 0px 33px;
     font:14px 'Montserrat', Arial, Helvetica, Sans-serif;
   }
   .section-two__link{
@@ -721,27 +1175,27 @@ body {
     display: none;
   }
 
-
   .section-three{
   height: 597px;
 }
   .section-three::before{
-  content: '';
-  display: flex;
-  position: absolute;
-  width: 42px;
-  height: 597px;
-  background: black;
-  right: 62%;
-}
+    content: '';
+    display: flex;
+    position: absolute;
+    margin: 0 0 0 40%;
+    width: 42px;
+    height: 597px;
+    background: black;
+    right: 62%;
+  }
   .section-three__look{
-  position: absolute;
-  z-index: 1;
-  width: 345px;
-  background-size: 100%;
-  margin-left: 14px;
-  margin-top: 34px;
-}
+    position: absolute;
+    z-index: 1;
+    width: 345px;
+    background-size: 100%;
+    margin-left: 14px;
+    margin-top: 34px;
+  }
   .section-three__look-text{
   position: absolute;
   margin: 274px 0px 0px 44px;
@@ -750,31 +1204,31 @@ body {
   z-index: 1;
 }
   .look-text__title{
-  font: bold 21px/20px 'montserrat', arial, helvetica, sans-serif;
-  margin: 25px 0px 0px 23px;
-}
+    font: bold 21px/20px 'montserrat', arial, helvetica, sans-serif;
+    margin: 25px 0px 0px 23px;
+   }
   .look-text__subtitle{
-  font: 10px 'montserrat', arial, helvetica, sans-serif;
-  margin: 5px 0px 0px 23px;
+    font: 10px 'montserrat', arial, helvetica, sans-serif;
+    margin: 5px 0px 0px 23px;
   }
   .look-text__text{
-  font: 10px/12px 'montserrat', arial, helvetica, sans-serif;
-  margin: 10px 55px 24px 24px;
+    font: 10px/12px 'montserrat', arial, helvetica, sans-serif;
+    margin: 9px 55px 24px 24px;
   }
   .look-text__button{
-  font: 14px 'montserrat', arial, helvetica, sans-serif;
-  height: 37px;
-  width: 260px;
-  margin: 0px 0px 0px 23px;
+    font: 14px 'montserrat', arial, helvetica, sans-serif;
+    height: 37px;
+    width: 260px;
+    margin: 0px 0px 0px 24px;
   }
   .section-three__link{
-  font: 16px/17px 'montserrat', arial, helvetica, sans-serif;
-  margin: 510px 40px 0px 188px;
+    font: 16px/17px 'montserrat', arial, helvetica, sans-serif;
+    margin: 509px 40px 0px 189px;
   }
   .section-three__vektor{
-  margin: 548px 0px 0px 189px;
-  background-size: 100%;
-  width: 138px;
+    margin: 546px 0px 0px 187px;
+    background-size: 100%;
+    width: 138px;
   }
   .section-three__footer{
 	  display: none;
