--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
-body {
+.body {
   margin: 0 auto;
   max-width: 1440px;
   font-family: montserrat, arial, helvetica, sans-serif;
+}  
 
 .header {
   display: flex;
@@ -340,6 +341,15 @@ body {
 	height: 27px;
 }
 
+@media (max-width: 1380px){
+  .section-one__vektor{
+    padding: 530px 0px 0px 0px;
+  }
+  .section-two__product{
+    margin: 163px 0px 0px 830px;
+  }
+}
+
 @media (max-width: 1366px){
   .section-one__link{
     padding: 539px 0px 0px 1000px;
@@ -380,6 +390,7 @@ body {
   }
   .section-three__vektor{
     margin: 642px 0px 0px 1033px;
+  }
 }
 
 @media (max-width: 1260px){
@@ -819,6 +830,7 @@ body {
   }
   .section-three__vektor{
     margin: 102% 0px 0px 55%;
+  }
 }
 
 @media (max-width: 562px){
@@ -1197,12 +1209,12 @@ body {
     margin-top: 34px;
   }
   .section-three__look-text{
-  position: absolute;
-  margin: 274px 0px 0px 44px;
-  width: 305px;
-  height: 195px;
-  z-index: 1;
-}
+   position: absolute;
+   margin: 274px 0px 0px 44px;
+   width: 305px;
+   height: 195px;
+   z-index: 1;
+  }
   .look-text__title{
     font: bold 21px/20px 'montserrat', arial, helvetica, sans-serif;
     margin: 25px 0px 0px 23px;
@@ -1233,4 +1245,5 @@ body {
   .section-three__footer{
 	  display: none;
   }
+}
 }
